# chatSummaryBot

./: README.md
bot/: pyproject.toml
gptAPITest/: ApiTest.py  Test.py  chata.txt
